--- a/src/pages/css/Create.css
+++ b/src/pages/css/Create.css
@@ -32,6 +32,7 @@
   width: 100%;
   border: none;
   border-radius: 10px !important;
+  padding-left: 10px;
   height: 30px;
 }
 
@@ -39,7 +40,9 @@
   width: 100%;
   border: none;
   border-radius: 10px !important;
+  padding-left: 10px;
   height: 50px;
+  font-family: inherit;
 }
 
 .input-container label {
